--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-portfolio",
-  "homepage": "https://gkos.tech",
+  "homepage": "https://abrahamgenetu.github.io/Ted-Portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,11 +13,13 @@
   "dependencies": {
     "@notionhq/client": "^0.2.2",
     "@vercel/analytics": "^0.1.3",
-    "gh-pages": "^4.0.0",
     "next": "^12.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-github-calendar": "^3.2.2",
     "react-pdf": "^5.7.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
